--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 <ul>
 <li><a href="/">首页</a></li>
 <li><a href="/confession">信仰立场</a></li>
-<li><a href="/history">教会历史</a></li>
+<li><a href="/history">教会记事</a></li>
 <li><a href="/sermons">福音信息</a></li>
 <li><a href="/links">链接</a></li>
 </ul>
