--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
 <li><a href="/history">教会记事</a></li>
 <li><a href="/sermons">福音信息</a></li>
 <li><a href="/witness">福音见证</a></li>
+<li><a href="/church_history">教会历史</a></li>
 <li><a href="/links">链接</a></li>
 </ul>
     </nav>
