--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
 <li><a href="/witness">福音见证</a></li>
 <li><a href="/church_history">教会历史</a></li>
 <li><a href="/links">链接</a></li>
+<li><a href="https://www.youtube.com/channel/UCGDP2iDdpRma1d3beQ6gwLg">链接テスト</a></li>
 </ul>
     </nav>
 <div class="container">
